--- a/package.json
+++ b/package.json
@@ -17,5 +17,8 @@
     "eslint-config-standard": "^7.1.0",
     "eslint-plugin-promise": "^3.5.0",
     "eslint-plugin-standard": "^2.1.1"
+  },
+  "dependencies": {
+    "mysql": "^2.13.0"
   }
 }
